Adds destroy_image action to image xml - also adds guard and verbose error message when an error occurs destroying image for openstack driver (e.g. trying destroy system image). Addresses JIRA DTACLOUD_207
https://issues.apache.org/jira/browse/DTACLOUD-207

--- a/server/views/images/show.xml.haml
+++ b/server/views/images/show.xml.haml
@@ -10,3 +10,4 @@
         %hardware_profile{ :href => hardware_profile_url(profile.name), :id => profile.name, :rel => :hardware_profile }
   %actions
     %link{ :rel => 'create_instance', :method => :post, :href => "#{instances_url};image_id=#{@image.id}"}
+    %link{ :rel => 'destroy_image', :method => :delete, :href => "#{destroy_image_url(@image.id)}" }
