--- a/server/views/instances/show.html.haml
+++ b/server/views/instances/show.html.haml
@@ -56,5 +56,7 @@
       %div{ :'data-role' => 'controlgroup', :'data-type' => "horizontal" }
         - @instance.actions.each do |action|
           =link_to_action action, self.send(:"#{action}_instance_url", @instance.id), instance_action_method(action)
+        - if @instance.state=="RUNNING" and driver.respond_to?(:run_on_instance)
+          =link_to_action 'run script', "#{run_instance_url(@instance.id)};id=#{@instance.id}", :get
         - if @instance.can_create_image?
           =link_to_action 'Create Image', api_url_for("images/new?instance_id=#{@instance.id}"), :get
