--- a/server/views/storage_volumes/attach.html.haml
+++ b/server/views/storage_volumes/attach.html.haml
@@ -16,4 +16,4 @@
       Device name:
     %input{ :name => "device", :size => 10, :value => "/dev/sdc"}
   %p
-    %input{ :type => :submit, :name => "commit", :value => "create" }/
+    %input{ :type => :submit, :name => "commit", :value => "attach" }/
