Adds ordering of hardware profiles returned from the Provider. Ordering is first by cpu and then by memory. Addresses JIRA DTACLOUD_208 Note: This patch was backported from non-modular
https://issues.apache.org/jira/browse/DTACLOUD-208

--- a/server/views/hardware_profiles/index.xml.haml
+++ b/server/views/hardware_profiles/index.xml.haml
@@ -1,4 +1,4 @@
 !!! XML
 %hardware_profiles
-  - @hardware_profiles.each do |prof|
+  - order_hardware_profiles(@hardware_profiles).each do |prof|
     = haml :'hardware_profiles/show', :locals => { :@hardware_profile => prof, :partial => true }
