--- a/server/lib/ec2/views/describe_images.haml
+++ b/server/lib/ec2/views/describe_images.haml
@@ -4,7 +4,7 @@
       %imageId=item.id
       %imageState=item.state.downcase
       %imageOwnerId=item.owner_id
-      %architecture item.architecture
+      %architecture=item.architecture
       %imageType machine
       %name=item.name
       %description=item.description
