error messages: quote HTML, shorten backtrace
  * Special characters like &, <, and > need to be escaped in error messages
  * In the backtrace in error messages, only show paths in deltacloud itself;
    the full backtrace is still in the error details secion of the page

--- a/server/views/cimi/errors/500.xml.haml
+++ b/server/views/cimi/errors/500.xml.haml
@@ -3,4 +3,4 @@
   %message< #{cdata @error.message}
   %backend{ :driver => driver_symbol }
     %code=response.status
-  %backtrace< #{cdata @error.backtrace.join("\n")}
+  %backtrace< #{h bt(@error.backtrace)}
