Adds XML for metrics - resolves JIRA DTACLOUD_235
https://issues.apache.org/jira/browse/DTACLOUD-235

--- a/server/views/metrics/index.xml.haml
+++ b/server/views/metrics/index.xml.haml
@@ -1,4 +1,5 @@
-!!!XML
+- unless defined?(partial)
+  !!!XML
 %metrics
   - @elements.each do |c|
-    = h
+    = haml :'metrics/show', :locals => { :@metric => c, :partial => true}
