Fix for JIRA DTACLOUD_196 - Use correct endpoint when getting s3 buckets and blobs. Also nit from modular.
https://issues.apache.org/jira/browse/DTACLOUD-196

--- a/server/views/buckets/new.html.haml
+++ b/server/views/buckets/new.html.haml
@@ -6,7 +6,7 @@
       Bucket Name:
       %input{ :name => 'name', :size => 250}/
       %br
-    -if driver.class.has_feature?(:bucket_location, :buckets)
+    -if driver.class.has_feature?(:buckets, :bucket_location)
       %p
         %label
           Location: (optional)
