--- a/server/views/keys/new.html.haml
+++ b/server/views/keys/new.html.haml
@@ -3,6 +3,13 @@
 %div{ :'data-role' => :content, :'data-theme' => 'c', :class => 'middle-dialog'}
   %form{ :action => keys_url, :method => :post}
     %div{ 'data-role' => :fieldcontain }
-      %label{ :for => :name} Key name:
-      %input{ :type => :text, :id => :name, :name => :name, :value => '' }
+      %p
+        %label{ :for => :name} Key name:
+      %p
+        %input{ :type => :text, :id => :name, :name => :name, :value => '' }
+      %p
+        %label{ :for => :public_key} Public Key (Optional - import):
+        %small Enter your public key here to import it rather than creating a new one (not supported by all providers)
+      %p
+        %textarea{ :name => :public_key, :cols=>65, :rows=>5 }
     %button{ :type => :submit} Create key
