Added download page
git-svn-id: https://svn.apache.org/repos/asf/deltacloud/trunk@1359072 13f79535-47bb-0310-9956-ffa450edef68

--- a/site/layouts/partials/default/nav.html
+++ b/site/layouts/partials/default/nav.html
@@ -7,6 +7,7 @@
       <li><a href="/supported-providers.html">Supported Providers</a></li>
     </ul>
   </li>
+  <li><a href="/download.html">Download</a></li>
   <li class="dropdown">
     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Installation<b class="caret"></b></a>
     <ul class="dropdown-menu">
