EC2: Fixed displaying of samples in metrics

--- a/server/views/metrics/show.xml.haml
+++ b/server/views/metrics/show.xml.haml
@@ -6,4 +6,7 @@
   %properties
     -@metric.properties.each do |prop|
       -haml_tag(prop.name, :<) do
-        - haml_concat prop.values
+        - prop.values.each do |p|
+          %sample
+            - p.each do |k, v|
+              %property{ :name => k, :value => v }
