--- a/server/views/metrics/show.html.haml
+++ b/server/views/metrics/show.html.haml
@@ -10,10 +10,10 @@
           %caption Statistics for last 60 minutes
           %tr
             %th Time
-            %th Minumum
+            %th Minimum
             %th Maximum
             %th Average
-            %th Units
+            %th Unit
           - p.values.each do |v|
             %tr
               %td=v[:timestamp]
