Fixes JIRA DTACLOUD_296 - storage volumes and HTML UI
https://issues.apache.org/jira/browse/DTACLOUD-296

--- a/server/views/storage_volumes/attach.html.haml
+++ b/server/views/storage_volumes/attach.html.haml
@@ -1,6 +1,6 @@
 %h1 Attach storage volume
 
-%form{ :action => attach_storage_volume_url(params[:id]), :method => :post }
+%form{ :action => api_url_for("storage_volumes/#{params[:id]}/attach"), :method => :post }
   %p
     %label
       Instance ID:
